force-app/main/default/objects/Digital_Passport__c/Digital_Passport__c.object-meta.xml
<CustomObject>
    <label>Digital Passport</label>
    <nameField>
        <displayFormat>PP-NX-{00000}</displayFormat>
        <label>Passport Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital Passports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>