force-app/main/default/objects/Digital_Passport__c/fields/Current_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner__c</fullName>
    <label>Current Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Owned Passports</relationshipLabel>
    <relationshipName>Owned_Passports</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>