force-app/main/default/objects/Digital_Passport__c/fields/Original_Owner__c.field-meta.xml
<CustomField>
    <fullName>Original_Owner__c</fullName>
    <label>Original Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Originally Owned Passports</relationshipLabel>
    <relationshipName>Originally_Owned_Passports</relationshipName>
    <type>Lookup</type>
</CustomField>