force-app/main/default/objects/Digital_Passport__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label
        >Active</label></value>
            <value><fullName>Transferred</fullName><default
        >false</default><label>Transferred</label></value>
            <value><fullName>Deactivated</fullName><default
        >false</default><label>Deactivated</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>